--- a/our-services.html
+++ b/our-services.html
@@ -291,7 +291,7 @@
             <div class="container-fluid">
                 <div class="video-banner d-flex align-items-center justify-content-center bg-parallax">
                     <div class="bg-img"><img src="assets/images/backgrounds/7.jpg" alt="img"></div>
-                    <a class="video-btn video-btn-white popup-video" href="https://youtu.be/6O-r1R_2vbE">
+                    <a class="video-btn video-btn-white popup-video" href="https://www.youtube.com/embed/6O-r1R_2vbE">
                         <div class="video-player">
                             <span class="video-player-animation"></span>
                             <span class="video-btn-title">play</span>
