--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <script>alert('Poda panni')</script>
     <div class="wrapper">
         <!-- =========================
         Header
