--- a/our-services.html
+++ b/our-services.html
@@ -199,7 +199,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-3">
-                        <h2 class="heading-subtitle">Services to help your business drive success</h2>
+                        <h2 class="heading-subtitle">Services to help your business drive success.</h2>
                     </div>
                     <!-- /.col-lg-3 -->
                     <div class="col-sm-12 col-md-12 col-lg-9">
@@ -267,7 +267,7 @@
                                 </div>
                                 <!-- /.award-item -->
                                 <div class="award-item">
-                                    <h4 class="award-item__title">Digital Strategy</h4>
+                                    <h4 class="award-item__title">Digital Strategy.</h4>
 
                                 </div>
                                 <!-- /.award-item -->
