--- a/about-us.html
+++ b/about-us.html
@@ -82,7 +82,7 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-12 col-lg-11 mb-40">
                         <h2 class="heading-subtitle">We love making things simple, intuitive and expertly crafted!</h2>
-                        <h3 class="heading-title">A design and development agency based in London. We create digital products that make people’s lives easier.</h3>
+                        <h3 class="heading-title">A design and development agency based in India & France. We create digital products that make people’s lives easier.</h3>
                     </div>
                     <!-- /.col-lg-11 -->
                 </div>
@@ -97,7 +97,7 @@
                             <!-- /.fancybox-icon -->
                             <div class="fancybox-item__content">
                                 <p class="fancybox-item__desc">Our business provides a general introduction to groups and teams used in workplaces with collaboration at our core, we are ready to work with you digital design solutions. We heed and act on your needs, to deliver a successful
-                                    project outcome. Our teams are equipped with the knowledge to get the job done, and are poised to deliver a wide range of services, detailed below.</p>
+                                    project outcome.</p>
                             </div>
                             <!-- /.fancybox-content -->
                         </div>
