--- a/about-us.html
+++ b/about-us.html
@@ -240,7 +240,7 @@
                             <!-- /.member-img -->
                             <div class="member__info">
                                 <h5 class="member__name">Chandru Elango</h5>
-                                <p class="member__desc">Founder & CEO</p>
+                                <p class="member__desc">Founder</p>
                             </div>
                             <!-- /.member-info -->
                         </div>
