--- a/contact.html
+++ b/contact.html
@@ -211,12 +211,17 @@
                         <!-- /.footer-widget__content -->
                     </div>
                     <!-- /.col-lg-3 -->
-                    <div class="col-sm-6 col-md-3 col-lg-3 footer-widget">
-                        <h6 class="footer-widget__title">India Office</h6>
-                        <div class="footer-widget__content">
-                            <p class="mb-0">Chennai, India.</p>
-                        </div>
-                        <!-- /.footer-widget__content -->
+                      <div class="col-sm-6 col-md-3 col-lg-3 footer-widget">
+            <h6 class="footer-widget__title">India Office</h6>
+            <div class="footer-widget__content">
+              <p class="mb-0">Chennai, India.</p>
+            </div><!-- /.footer-widget__content -->
+          </div><!-- /.col-lg-3 -->
+          <div class="col-sm-6 col-md-3 col-lg-3 footer-widget">
+            <h6 class="footer-widget__title">France Office</h6>
+            <div class="footer-widget__content">
+              <p class="mb-0">Paris, France.</p>
+            </div><!-- /.footer-widget__content -->
                     </div>
                     <!-- /.col-lg-3 -->
                     <div class="col-sm-6 col-md-3 col-lg-3 footer-widget">
